ords-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ords-nondev
  namespace: ords-zoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ords-nondev
      app.kubernetes.io/name: ords-nondev
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ords-nondev
        app.kubernetes.io/name: ords-nondev
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ords-config-pvc
        - name: scripts
          configMap:
            name: ords-init-config
            defaultMode: 0755  # Make the script executable
      containers:
        - name: app
          image: container-registry.oracle.com/database/ords:latest
          imagePullPolicy: IfNotPresent
          command:
            - ords
            - serve
          ports:
            - containerPort: 8080
              name: http-ords
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/ords/config
